--- a/src/app/baseitems/baseitems.component.html
+++ b/src/app/baseitems/baseitems.component.html
@@ -1,8 +1,29 @@
+<label class="btn btn-default">
+  <input type="file" (change)="selectFile($event)">
+</label>
+<button class="btn btn-success" [disabled]="!selectedFiles" (click)="upload()">Upload</button>
+
 <p>
   baseitems works!
 </p>
 <label for="imageUpload">Image Upload</label>
 <input type="file" (change)="fileEvent($event)" name="imageUpload" id="imageUpload"/>
+
+
+
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
+  <div class="form-group">
+    <label for="name">Name</label>
+    <input type="text" class="form-control" id="name" placeholder="Bob" formControlName="name">
+  </div>
+  <div class="form-group">
+    <label for="avatar">Avatar</label>
+    <input type="file" id="avatar" (change)="onFileChange($event)" #fileInput>
+    <button type="button" class="btn btn-sm btn-default" (click)="clearFile()">clear file</button>
+  </div>
+  <button type="submit" [disabled]="form.invalid || loading" class="btn btn-success">Submit <i class="fa fa-spinner fa-spin fa-fw" *ngIf="loading"></i></button>
+</form>
+
 
 <div *ngIf="baseitem">
   <h2>{{baseitem.name}}</h2>
