try to upload directly

--- a/src/app/baseitems/baseitems.component.html
+++ b/src/app/baseitems/baseitems.component.html
@@ -9,7 +9,9 @@
 <label for="imageUpload">Image Upload</label>
 <input type="file" (change)="fileEvent($event)" name="imageUpload" id="imageUpload"/>
 
-
+<p>
+  Above is s3policy upload works!
+</p>
 
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
   <div class="form-group">
